[workspace]
resolver = "2"
members = [
    "fins-api-catcher",
    "fins-streamelements-channel",
    "fins-rest-client",
    "fins-byte-array",
    "fins-migrations-fairing",
]

[workspace.package]
version = "0.4.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rocket = { version = "0.5.0", features = [
    "json",
] }
diesel_migrations = "2.0.0"

