[workspace]
resolver = "2"
members = [
    "fins-api-catcher",
    "fins-streamelements-channel",
    "fins-rest-client",
    "fins-byte-array",
    "fins-migrations-fairing",
]

[workspace.package]
version = "0.6.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rocket = { version = "0.5.1", features = [
    "json",
] }
diesel_migrations = "2.2.0"
serde = "1.0"
base64 = "0.22.1"
hex = "0.4.3"
log = "0.4.17"
reqwest = "0.12.12"
thiserror = "2.0.12"
