[package]
name = "fins-api-catcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde = { version = "1.0", features = ["derive"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", tag = "v0.5.0-rc.1", features = [
    "json",
] }
