[package]
name = "fins-rest-client"
version.workspace = true
license.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true, features = ["derive"] }
rocket.workspace = true
reqwest = { workspace = true, features = ["json"] }
